--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,9 @@ rect.mainline {
 }
 
 .artboard {
-    border: 1px solid gray;
+    border: 1px solid #dddddd;
+    border-radius: 3px;
+    background: #fdfdfd;
     padding: 10px;
     margin: 10px;
     width: 400px;
