--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ label {
 	
 }
 
+span.result {
+    background: #dedede;
+    padding: 0 4px;
+    margin: 0 5px;
+    border-radius: 2px;
+}
+
 label[disabled] {
 	color: gray;
 }
