--- a/src/app.css
+++ b/src/app.css
@@ -6,15 +6,38 @@ body {
     box-sizing: border-box;
 }
 
+h1 {
+    font-weight: 100;
+    margin-bottom: 0;
+}
+
 .main-header {
     /* margin: 0 20px; */
     max-width: 70vw;
-    margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     padding: 0 10px;
+    display: flex;
 }
 
+.main-header .toolbar {
+    text-align: right;
+    flex-grow: 1;
+    margin-top: 25px
+}
+
+.main-header .toolbar .button {
+
+    font-size: 1.5em;
+    color: grey;
+    cursor: pointer;
+    transition: color 300ms ease-in;
+}
+
+
+.main-header .toolbar .button:hover {
+    color: black;
+}
 
 
 .slice {
@@ -66,6 +89,21 @@ body {
     color: gray;
 }
 
+.slice .header .button-toggle {
+    font-size: 11px;
+    margin-top: 5px;
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    color: gray;
+    margin-right: 5px;
+    -webkit-user-select: none;
+}
+
+.slice .header .button-toggle.active {
+    color: purple;
+}
+
 .slice .header .button:hover {
   color: black;
 }
@@ -101,53 +139,6 @@ body {
 
 .widget {
     flex-grow: 1;
-}
-
-.CodeMirror {
-    height: auto !important;
-    min-height: 100px;
-    font-size: 13px;
-}
-
-.editor .CodeMirror pre {
-    padding: 0 10px;
-}
-
-.editor .CodeMirror-lines {
-    padding: 10px 0;
-}
-
-
-.deleted {
-    color: #b30000;
-    background: #fadad7;
-}
-
-.inserted {
-    background: #eaf2c2;
-    color: #406619;
-}
-
-.line-inserted {
-    background: #c9f1c9;
-}
-
-.line-changed {
-    background: #ffffbb;
-}
-
-
-.line-removed {
-    background: #ffd7d7;
-    padding: 0 10px;
-}
-
-
-span.result {
-    background: #dedede;
-    padding: 0 4px;
-    margin: 0 5px;
-    border-radius: 2px;
 }
 
 .slice.reference {
